# AAL_pomidorki

./: CMakeLists.txt  readme.md
Projekt/: algorithm.hpp  generator.cpp  generator.hpp  main.cpp  test.cpp
Projekt/include/: algorithm.hpp  base.hpp  field.hpp  generator.hpp  naive.hpp
Projekt/src/: algorithm.cpp  externalGenerator.cpp  generator.cpp  main.cpp  naive.cpp
